# receipt-recipe

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.db  docker-compose.gpu.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  init.sql  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: lint.yml
app/: __init__.py
app/backend/: __init__.py  database.py
app/backend/api/: __init__.py  app.py  main.py
app/backend/api/routers/: __init__.py  auth_routes.py  foods.py  ingredient_abstractions.py  ingredients.py  receipts.py  recipes.py  recommendation.py  users.py
app/backend/database/: p.py
app/backend/models/: __init__.py  food.py  ingredient_abstraction.py  recipe.py  refresh_token.py  user.py
app/backend/services/: food_master_loader.py  recipe_loader.py
app/backend/services/abstractor/: __init__.py  abstractor.py  ingredient_abstraction_service.py  ingredient_name_resolver.py
app/backend/services/item_abstractor/API/: APImain.py
app/backend/services/item_abstractor/image_recognition/: image_recognizer_predict.py  image_recognizer_training.py  食材番号対応表
app/backend/services/ocr/: receipt_ocr.py
app/backend/services/ocr/Item_Detection/: item_detector.py
app/backend/services/ocr/gnn/: graph_builder.py
app/backend/services/ocr/image_preprocessing/: image_preprocessor.py
app/backend/services/ocr/text_detection/: text_detector.py
app/backend/services/recommendation/: data_models.py  data_source.py  main.py  proposer_logic.py
app/backend/test/: client1.py
app/data/detected_texts/receipt/: detected_text.txt  metadata.json
app/data/detected_texts/receipt_custom/: detected_text.txt  metadata.json
app/frontend/: config.js  food-add.html  food-add.js  food-delete.html  food-delete.js  fridge-check.html  fridge-check.js  fridge-control.html  fridge-control.js  fridge-hidden.html  fridge-hidden.js  fridge-home.html  fridge-home.js  home.html  home.js  index.html  index.js  ingredient-resolver.html  ingredient-resolver.js  receipt-add.html  receipt-add.js  recipe-detail.html  recipe-detail.js  recipe.html  recipe.js  register.html  register.js  style.css
app/scripts/: script_text_detector.py
app/tests/backend/ocr/image_preprocessing/: test_image_preprocessor.py
app/tests/backend/ocr/text_detection/: test_text_detector.py
app/tests/backend/recommendation/: test_recommendation.py
data/: receipe.csv  recipes.json
data/foodlist/: foodlist.json  list.txt  receipe.csv
data/recipe-list/: 0001.html  0002.html  0003.html  0004.html  0005.html  0006.html  0007.html  0008.html  0009.html  0010.html  0011.html  0012.html  0013.html  0014.html  0015.html  0016.html  0017.html  0018.html  0019.html  0020.html  0021.html  0022.html  0023.html  0024.html  0025.html  0026.html  0027.html  0028.html  0029.html  0030.html  0031.html  0032.html  0033.html  0034.html  0035.html  0036.html  0037.html  0038.html  0039.html  0040.html  (+11 more)
docs/: Configuration-diagram.md  api-design.md  architecture.md  database-connection.md  database.md  databasetable.md  environment.md  ocr-inputoutput.md  setup.md
images/パクチー/: 010.jpgimformat=generic  022.phpid=503  038.jpg2019-05-29%20143242%20+0900  043.jpgv=1677218138  047.jpgimformat=generic&q=90&im=Resize,width=1280,type=normal
migrations/: 20231206_add_calories_to_recipes.sql  20231207_add_recipe_cook_source_type.sql  20231208_add_recipe_feature_flags.sql  20251207_add_user_recipe_history.sql  20251212_add_ingredient_abstractions.sql
scripts/: README.md  verify_cuda_packages.py
tests/backend/abstractor/: test_ingredient_abstraction.py
tests/backend/api/: test_ingredients.py  test_receipts.py  test_recipes.py  test_recommendation.py
tests/backend/ocr/: test_receipt_line_filter.py
tests/backend/services/recommendation/: test_user_profile_vector.py
tmp/: debug_recommendation_history.py  receipe_normalized.csv
