[project]
name = "receipt-recipe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    # OCR・画像処理
    "pytesseract>=0.3.10",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "pdf2image>=1.16.0",
    
    # 深層学習・AI（ベースイメージのPyTorchを使用）
    # torch>=2.0.0 はベースイメージに含まれるため除外
    # torchvision>=0.15.0 も同様
    "transformers>=4.30.0",
    "torch-geometric>=2.3.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    
    # データベース
    "pymysql>=1.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    
    # 自然言語処理・スクレイピング
    "mecab-python3>=1.0.6",
    "unidic-lite>=1.0.8",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "selenium>=4.10.0",
    "webdriver-manager>=3.8.0",
    "requests>=2.31.0",
    
    # API・Web
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.24.0",
    
    # 非同期処理・タスク管理
    "celery>=5.3.0",
    "redis>=4.6.0",
    
    # その他ユーティリティ
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    # テスト・開発ツール
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
    "ruff>=0.0.289",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
ignore = ["E501"]
